fixed dropdown overlap on navbar (only), removed padding on video block popout

--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ body {
   text-decoration: none;
 }
 
+.side__navbar__list__item {
+  /* position: absolute; */
+  
+
+}
+
+
 .searchbar {
   /* width: 540px; */
   width: 48%;
@@ -82,7 +89,7 @@ body {
   position:fixed;
   top: 60px;
   background-color: white;
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   overflow: hidden; 
   height: 55px;
@@ -166,8 +173,8 @@ body {
 
 .dropdown-menu {
   border-radius: 0;
-  /* position: relative;
-  z-index: 10000; */
+  /* position: relative;*/
+  /* z-index: 100000;  */
 }
 
 .dropdown__big {
@@ -199,14 +206,16 @@ body {
   position: relative;
   background-color: #F9F9F9;
   margin-top: 10px;
+  z-index:1;
 }
 
 .video__block:hover {
   transform: scale(1.25);
   transition: ease;
-  transition-delay: 1s;
+  transition-delay: 1.1s;
   transition-duration: .75s;
   z-index: 1000;
+  /* transition-property: z-index; */
 }
 
 /* .video__info__block {
@@ -223,8 +232,7 @@ body {
   font-weight: 550;
   border-radius: 2px;
   top: 135px;
-  right: 15px;
-  
+  right: 4px;
 }
 
 .video {
@@ -257,11 +265,14 @@ display: none;
   height: 35px;
   width: 35px;
   float:left;
+  margin-left: 5px;
 }
 
 .video__title {
   font-weight: 600;
   font-size: 14px;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
 .profile__name {
@@ -269,12 +280,24 @@ display: none;
   color: rgb(83, 82, 82);
   font-weight: 500;
   margin-bottom: 0;
+  margin-left: 5px;
 }
 
 .video__views {
   color: rgb(83, 82, 82);
   font-weight: 500;
   font-size: 12px;
+  margin-left: 5px;
+}
+
+.video__options__menu__container {
+  position: absolute;
+  right: 5px;
+  bottom: 72px;
+}
+
+.video__options__menu__icon {
+  color:black;
 }
 
 .muscle {
